5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1644_2711.log
== SUBMITION (2019-04-16 15:15:16) 
-- CODE:
from math import * 
vo = float (input("Velocidade inicial (m)"))
a = radians(float(input("Angulo")))
D = abs (float(input("Distancia")))
g = 9.8
R = ((vo)**2*sin(2*a)/g)
if(D-R<0.1):
	print("sim")
else:
	print ("nao")
-- EXECUTION TIME:
0.150163
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
sim
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:35:34) 
-- CODE:
valor = float(input("Qual o seu valor disponivel?"))
tickets = int(input("Quantos tickets deseja comprar?"))
vt = float(input("Quanto custa um ticket?"))
passes = int(input("Quantos passes de onibus deseja comprar?"))
vp = float(input("Valor dos passes"))

if(valor>= tickets*vt + passes*vp)
  print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.198051
-- ERROR:
  File "/home/codebench/codes/1644/2711/main.py", line 7
    if(valor>= tickets*vt + passes*vp)
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:36:11) 
-- CODE:
valor = float(input("Qual o seu valor disponivel?"))
tickets = int(input("Quantos tickets deseja comprar?"))
vt = float(input("Quanto custa um ticket?"))
passes = int(input("Quantos passes de onibus deseja comprar?"))
vp = float(input("Valor dos passes"))

if(valor>= tickets*vt + passes*vp):
  print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.159856
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
